--- a/webcard/index.html
+++ b/webcard/index.html
@@ -35,15 +35,23 @@
             left: 50%;
             transform: translate(-50%, -50%);
         }
-        #profile .txt .cont span {
-            position: fixed;
-            display: block;
+        #profile .txt .cont h1 {
+            font-size: 6vw;
+            margin-bottom: 20px;
+        }
+        #profile .txt .cont p {
+            font-size: 3vw;
+            line-height: 5vw;
+        }
+        #profile .txt span {
+            font-size: 14px;
+            position: absolute;
             right: 10px;
         }
-        #profile .txt .cont span:nth-child(1) {
+        #profile .txt span:nth-of-type(1) {
             top: 10px;
         }
-        #profile .txt .cont span:nth-child(2) {
+        #profile .txt span:nth-of-type(2) {
             bottom: 10px;
         }
 
@@ -68,15 +76,15 @@
         <div id="profile">
             <div class="img"></div>
             <div class="txt">
+                <span>WEB CARD</span>
                 <div class="cont">
-                    <span>WEB CARD</span>
                     <h1>Your Name</h1>
                     <p>Team / Job</p>
                     <p>010 - 0000 - 0000</p>
                     <p>Location</p>
                     <p>In your ... </p>
-                    <span>copyright 2020. KangHee Lee All rights reserved.</span>
                 </div>
+                <span>copyright 2020. KangHee Lee All rights reserved.</span>
             </div>
         </div>
     </div>
