--- a/webcard/red.html
+++ b/webcard/red.html
@@ -18,15 +18,15 @@
             width: 50%;
             height: 100%;
             float: left;
-            background: center / cover no-repeat url(img/profile.jpg);
+            background: center / cover no-repeat url(img/profile-red.jpg);
         }
         #profile .txt {
             width: 50%;
             height: 100%;
             float: left;
             position: relative;
-            /* background: #4e060d; */
-            background: #381907;
+            background: #4e060d;
+            /* background: #381907; */
             color: #fff;
             display: table;
         }
@@ -48,17 +48,6 @@
         #profile .txt .cont:hover {
             
         }
-        #profile .txt a {
-            text-decoration: none;
-            display: block;
-            width: 10rem;
-            height: 2rem;
-            line-height: 2rem;
-            background: #fff;
-            text-align: center;
-            color: #381907;
-            /* position: absolute; */
-        }
         #profile .txt span {
             font-size: 0.8rem;
             position: absolute;
@@ -79,7 +68,7 @@
                 width: 100%;
                 height: 50%;
                 float: none;
-                background: top center / cover no-repeat url(img/profile.jpg);
+                background: top center / cover no-repeat url(img/profile-red.jpg);
             }
             #profile .txt {
                 width: 100%;
@@ -97,7 +86,6 @@
             <div class="txt">
                 <span>WEB CARD</span>
                 <div class="cont">
-                    <a href="red.html">Red Version</a>
                     <h1>Your Name</h1>
                     <p>Team / Job</p>
                     <p>010 - 0000 - 0000</p>
