--- a/webcard/index.html
+++ b/webcard/index.html
@@ -39,7 +39,7 @@
         }
         #profile .txt .cont h1 {
             font-size: 4rem;
-            margin-bottom: 20px;
+            margin: 20px 0;
         }
         #profile .txt .cont p {
             font-size: 1.5rem;
@@ -57,7 +57,8 @@
             background: #fff;
             text-align: center;
             color: #381907;
-            /* position: absolute; */
+            font-weight: bold;
+            font-size: 1.2rem;
         }
         #profile .txt span {
             font-size: 0.8rem;
