--- a/webcard/red.html
+++ b/webcard/red.html
@@ -39,7 +39,7 @@
         }
         #profile .txt .cont h1 {
             font-size: 4rem;
-            margin-bottom: 20px;
+            margin: 20px 0;
         }
         #profile .txt .cont p {
             font-size: 1.5rem;
@@ -47,6 +47,18 @@
         }
         #profile .txt .cont:hover {
             
+        }
+        #profile .txt a {
+            text-decoration: none;
+            display: block;
+            width: 10rem;
+            height: 2rem;
+            line-height: 2rem;
+            background: #fff;
+            text-align: center;
+            color: #4e060d;
+            font-weight: bold;
+            font-size: 1.2rem;
         }
         #profile .txt span {
             font-size: 0.8rem;
@@ -86,6 +98,7 @@
             <div class="txt">
                 <span>WEB CARD</span>
                 <div class="cont">
+                    <a href="index.html">Brown Version</a>
                     <h1>Your Name</h1>
                     <p>Team / Job</p>
                     <p>010 - 0000 - 0000</p>
