--- a/webcard/red.html
+++ b/webcard/red.html
@@ -4,11 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEBCARD</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+        }
+        html {
+            font-size: 20px;
+            font-family: 'Noto Sans KR', sans-serif;
         }
         #profile {
             width: 100%;
@@ -38,12 +44,14 @@
             transition: 1s;
         }
         #profile .txt .cont h1 {
-            font-size: 4rem;
-            margin: 20px 0;
+            font-size: 3.5rem;
+            font-weight: 700;
+            margin: 1rem 0;
         }
         #profile .txt .cont p {
             font-size: 1.5rem;
-            line-height: 2rem;
+            font-weight: 500;
+            line-height: 2.2rem;
         }
         #profile .txt .cont:hover {
             
@@ -62,6 +70,7 @@
         }
         #profile .txt span {
             font-size: 0.8rem;
+            font-weight: 100;
             position: absolute;
             right: 10px;
         }
@@ -105,7 +114,7 @@
                     <p>Location</p>
                     <p>In your ... </p>
                 </div>
-                <span>copyright 2020. KangHee Lee All rights reserved.</span>
+                <span>copyright 2020. In YourName All rights reserved.</span>
             </div>
         </div>
     </div>
