--- a/webcard/blue.html
+++ b/webcard/blue.html
@@ -24,15 +24,15 @@
             width: 50%;
             height: 100%;
             float: left;
-            background: center / cover no-repeat url(img/profile.jpg);
+            background: center / cover no-repeat url(img/profile-blue.jpg);
         }
         #profile .txt {
             width: 50%;
             height: 100%;
             float: left;
             position: relative;
-            /* background: #4e060d; */
-            background: #381907;
+            background: #056d99;
+            /* background: #381907; */
             color: #fff;
             display: table;
         }
@@ -64,7 +64,7 @@
             line-height: 2rem;
             background: #fff;
             text-align: center;
-            color: #381907;
+            color: #056d99;
             font-weight: bold;
             font-size: 1.2rem;
         }
@@ -89,7 +89,7 @@
                 width: 100%;
                 height: 50%;
                 float: none;
-                background: top center / cover no-repeat url(img/profile.jpg);
+                background: top center / cover no-repeat url(img/profile-blue.jpg);
             }
             #profile .txt {
                 width: 100%;
@@ -107,7 +107,7 @@
             <div class="txt">
                 <span>WEB CARD</span>
                 <div class="cont">
-                    <a href="blue.html">Blue Version</a>
+                    <a href="index.html">Brown Version</a>
                     <h1>Your Name</h1>
                     <p>Team / Job</p>
                     <p>010 - 0000 - 0000</p>
