--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -63,7 +63,9 @@
         <h3>Information</h3>
         <div class="container">
             <div id="map">
+                <!--
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1581.5126240255129!2d126.935703708314!3d37.55446893266729!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x4916c3cc69cb6c2f!2z7ZWY7J2066-465SU7Ja07Lu07ZOo7YSw7ZWZ7JuQ7Iug7LSM7KCQ!5e0!3m2!1sko!2skr!4v1607829910123!5m2!1sko!2skr" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                -->
             </div>
             <div class="info-txt">
                 <p><i class="xi-home-o"></i>서울특별시 마포구 하이미디어 신촌점</p>
@@ -74,5 +76,30 @@
     </section>
     <!-- INFO -->
 </div>
+
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5f7f23ac38a11780f8c2ef5643db23b8"></script>
+<script>
+    var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
+    mapOption = { 
+        center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+        level: 3 // 지도의 확대 레벨
+    };
+
+    var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성합니다
+
+    // 마커가 표시될 위치입니다 
+    var markerPosition  = new kakao.maps.LatLng(33.450701, 126.570667); 
+
+    // 마커를 생성합니다
+    var marker = new kakao.maps.Marker({
+        position: markerPosition
+    });
+
+    // 마커가 지도 위에 표시되도록 설정합니다
+    marker.setMap(map);
+
+    // 아래 코드는 지도 위의 마커를 제거하는 코드입니다
+    // marker.setMap(null); 
+</script>
 </body>
 </html>
