--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -18,9 +18,12 @@
         </label>
         <nav>
             <ul>
-                <li><a href="#main">Main</a></li>
-                <li><a href="#intro">Intro</a></li>
-                <li><a href="#info">Info</a></li>
+                <li>
+                    <a href="#main">Main</a>
+                    <span></span>
+                </li>
+                <li><a href="#intro">Intro</a><span></span></li>
+                <li><a href="#info">Info</a><span></span></li>
             </ul>
         </nav>
     </header>
@@ -77,7 +80,7 @@
     <!-- INFO -->
 </div>
 
-<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5f7f23ac38a11780f8c2ef5643db23b8"></script>
+<!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5f7f23ac38a11780f8c2ef5643db23b8"></script> -->
 <script>
     var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
     mapOption = { 
