--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -80,7 +80,7 @@
     <!-- INFO -->
 </div>
 
-<!-- <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5f7f23ac38a11780f8c2ef5643db23b8"></script> -->
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5f7f23ac38a11780f8c2ef5643db23b8"></script>
 <script>
     var mapContainer = document.getElementById('map'), // 지도를 표시할 div 
     mapOption = { 
