--- a/parallax/chul/index.html
+++ b/parallax/chul/index.html
@@ -10,45 +10,20 @@
 </head>
 <body>
   <div class="wrap">
-    <div id="sec-01" class="section">
-      <div class="tit" data-0="opacity: 1;" data-500="opacity: 0;">
-        <h2>TITLE</h2>
+    <div class="sec-01 section">
+      <!-- data-0 ~ data-3000 -->
+      <div class="bg"></div>
+      <div class="txt" data-0="width: 40%; height: 40%; font-size: 1.2rem;" data-1500="width: 100%; height: 100%; font-size: 0;">
+        <p>새롭게 다시 태어난</p>
+        <p class="tit" data-1500="font-size: 2rem;" data-2000="font-size: 0;">정용철의 <span>1</span>주<span>년</span><span class="part-2" data-2000="font-size: 0rem;" data-3000="font-size: 2rem;">동안</span><span class="part-3" data-3000="left: 100%;" data-3500="left: 0;">잘 참고 견뎌줘서</span></p>
+        <p>축하메세지</p>
       </div>
     </div>
-    <div id="sec-02" class="section">
-      <div class="gallery-01" data-500="transform: translateX(0%);" data-1500="transform: translateX(-200%);">
-        <div class="picture"></div>
-        <div class="picture"></div>
-        <div class="picture"></div>
-        <div class="picture"></div>
-      </div>
-    </div>
-    <div id="sec-03" class="section">
-      <div class="obj">
-        <span data-1400="opacity: 0;" data-1500="opacity: 1; top: 10%; left: 20%;" data-2000="top: 20%; left: 50%;" data-2500="top: 60%; left: 80%;" data-3000="top: 70%; left: 50%;" data-3500="top: 100%; left: 20%;"></span>
-      </div>
-    </div>
-    <div id="sec-04" class="section">
-      <div class="gallery-02">
-        <div class="picture" data-3500="width: 0vw; height: 0vw;" data-4000="width: 30vw; height: 30vw;" data-4500="width: 0vw; height: 0vw;"></div>
-        <div class="picture" data-4500="width: 0vw; height: 0vw;" data-5000="width: 30vw; height: 30vw;" data-5500="width: 0vw; height: 0vw;"></div>
-        <div class="picture" data-5500="width: 0vw; height: 0vw;" data-6000="width: 30vw; height: 30vw;" data-6500="width: 0vw; height: 0vw;"></div>
-        <div class="picture" data-6500="width: 0vw; height: 0vw;" data-7000="width: 30vw; height: 30vw;" data-7500="width: 0vw; height: 0vw;"></div>
-      </div>
-    </div>
-    <div id="sec-05" class="section">
-      <div class="poem" data-9500="opacity: 1; top: 30%;" data-10000="opacity: 0; top: 20%;">
-        <p data-7500="opacity: 0; transform: translateX(100%);" data-8000="opacity: 1; transform: translateX(0%);">첫번째문장</p>
-        <p data-7800="opacity: 0; transform: translateX(-100%);" data-8500="opacity: 1; transform: translateX(0%);">두번째문장</p>
-        <p data-8300="opacity: 0; transform: translateX(100%);" data-9000="opacity: 1; transform: translateX(0%);">세번째문장</p>
-        <p data-8800="opacity: 0; transform: translateX(-100%);" data-9500="opacity: 1; transform: translateX(0%);">네번째문장</p>
-      </div>
-    </div>
-    <div id="sec-06" class="section">
-      <div class="txt">
-        <h3 data-10000="transform: scale(0)" data-12000="transform: scale(5)">TEXT</h3>
-      </div>
-    </div>
+    <div class="sec-02 section"></div>
+    <div class="sec-03 section"></div>
+    <div class="sec-04 section"></div>
+    <div class="sec-05 section"></div>
+    <div class="sec-06 section"></div>
   </div>
 
 
