--- a/parallax/chul/index.html
+++ b/parallax/chul/index.html
@@ -15,12 +15,21 @@
       <div class="bg"></div>
       <div class="txt" data-0="width: 40%; height: 40%; font-size: 1.2rem;" data-1500="width: 100%; height: 100%; font-size: 0;">
         <p>새롭게 다시 태어난</p>
-        <p class="tit" data-1500="font-size: 2rem;" data-2000="font-size: 0;">정용철의 <span>1</span>주<span>년</span><span class="part-2" data-2000="font-size: 0rem;" data-3000="font-size: 2rem;">동안</span><span class="part-3" data-3000="left: 100%;" data-3500="left: 0;">잘 참고 견뎌줘서</span></p>
+        <p class="tit" data-1500="font-size: 2rem;" data-2000="font-size: 0;">정용철의 <span>1</span>주<span>년</span><span class="part-2" data-2000="font-size: 0rem;" data-3000="font-size: 2rem;">동안</span><span class="part-3" data-3000="" data-3500=""><!-- 잘 참고 견뎌줘서--></span></p>
         <p>축하메세지</p>
       </div>
     </div>
-    <div class="sec-02 section"></div>
-    <div class="sec-03 section"></div>
+    <div class="sec-02 section">
+      <div class="wrap clear"  data-3500="left: 200%;" data-5000="left: -200%;">
+        <div class="cont-img"></div>
+        <div class="cont-img"></div>
+        <div class="cont-img"></div>
+        <div class="cont-img"></div>
+      </div>
+    </div>
+    <div class="sec-03 section">
+
+    </div>
     <div class="sec-04 section"></div>
     <div class="sec-05 section"></div>
     <div class="sec-06 section"></div>
